manifests/gitpod/010_NetworkPolicy_registry-facade.yaml
---
# networking.k8s.io/v1/NetworkPolicy registry-facade
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  labels:
    app: gitpod
    component: registry-facade
  name: registry-facade
  namespace: gitpod
spec:
  ingress:
    - {}
  podSelector:
    matchLabels:
      app: gitpod
      component: registry-facade
  policyTypes:
    - Ingress
